# photo-screener

./: .gitignore  BUILD.md  index.html  package-lock.json  package.json  push_to_github.bat  vite.config.ts
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
